# spidy-Air

./: .gitignore  LICENSE  README.md  pyproject.toml
native/: Makefile  README.md  build.bat
native/src/: app.manifest  app.rc  main.cpp  wifi_scan.c  wifi_scan.h
native/tools/: make_icon.py
tests/: sample_netsh.txt  test_auditor.py
wifi_auditor/: __init__.py  auditor.py  cli.py  models.py  report.py  scanner.py  web.py
wifi_auditor/static/: app.css  app.js
wifi_auditor/templates/: index.html
